# tester-graphrag

./: Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json
demo/: graph-query.sql  graphrag_query.sql  semantic-ranker.sql
graphrag/: settings.yaml
graphrag/output/: create_final_documents.parquet  create_final_entities.parquet  create_final_nodes.parquet  create_final_relationships.parquet  stats.json
graphrag/prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
playground/: graph_prompt_v2.ipynb  graph_query_v2.sql
prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
scripts/: setup_postgres_seeddata.sh
src/backend/.devcontainer/: devcontainer.json
src/backend/fastapi_app/: postgres_engine.py  postgres_models.py  postgres_searcher.py  rag_simple.py  setup_postgres_legal_database.py  setup_postgres_legal_seeddata.py
src/backend/fastapi_app/routes/: api_routes.py
src/backend/static/: index.html
src/frontend/: package-lock.json  package.json
src/frontend/src/components/AnalysisPanel/: AnalysisPanel.tsx  GraphPanel.tsx
src/frontend/src/pages/chat/: Chat.tsx
