[tool.poetry]
name = "graphrag-legalcases-postgres"
version = "0.1.0"
description = ""
authors = ["Jonathon Frost <jfrost@microsoft.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
python-dotenv = "1.0"
environs = "11.0"
azure-identity = "1.0"
aiohttp = "3.0"
asyncpg = "0.29.0"
SQLAlchemy = "2.0"
pgvector = "0.2.0"
openai = "1.0"
tiktoken = "0.7.0"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
sshtunnel = "^0.4.0"
uvicorn = "^0.32.1"
openai-messages-token-helper = "^0.1.10"
azure-monitor-opentelemetry = "^1.6.4"
opentelemetry-instrumentation-sqlalchemy = "^0.49b2"
opentelemetry-instrumentation-aiohttp-client = "^0.49b2"
opentelemetry-instrumentation-openai = "^0.33.12"
beautifulsoup4 = "^4.12.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
